[project]
name = "email-rl-env"
version = "0.1.0"
description = "OpenEnv RL environment for email triage"
authors = [{name = "Tejas"}]
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"